syntax = "proto3";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "proto";
option java_outer_classname = "Proto";

package grpc;

message Position {
  int32 x = 1;
  int32 y = 2;
}

message PlayerUnit {
  ObjectId unitId = 1;
  Position position = 2;
  Position destination = 3;
  int32 currentHealth = 4;
  int32 maxHealth = 5;
  int32 speed = 6;
}

message ObjectId {
  int64 id = 1;
}

message EntitySkeleton {
    int64 id = 1;
    int64 userId = 2;
    Position position = 3;
}

message Reward {
    int32 quantity = 1;
    string reward = 2;
}

message Collectable {
    int64 id = 1;
    Position position = 2;
    string type = 3;
    Reward reward = 4;
}

message Environment {
    int64 id = 1;
    int64 userId = 3;
    Position position = 4;
    string type = 5;
}

message StartGameRequest {
    repeated EntitySkeleton entities = 1;
    repeated Collectable collectables = 2;
    repeated Environment environments = 3;
}

message User {
  int64 id = 1;
  string ip = 2;
  int32 port = 3;
  string username = 4;
}

message DetailedLobbyInfo {
  int64 id = 1;
  string lobbyName = 2;
  User leader = 3;
  repeated User users = 4;
  int32 maxPlayers = 5;
  string selectedMap = 6;
}

service GameService {
  rpc getPlayerUnitInfo (ObjectId) returns (PlayerUnit);
  rpc startGame (StartGameRequest) returns (google.protobuf.Empty);
  rpc updateLobby(DetailedLobbyInfo) returns (google.protobuf.Empty);
}