syntax = "proto3";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "nsProto";
option java_outer_classname = "Proto";

package grpc;

message LobbyId {
  int64 id = 1;
}

message User {
  int64 id = 1;
  string ip = 2;
  int32 port = 3;
  string username = 4;
}

message LobbyInfo {
  LobbyId id = 1;
  User lobbyLeader = 2;
  string lobbyName = 3;
  int32 nrPlayers = 4;
  int32 maxPlayers = 5;
  bool started = 6;
}

message NewLobby {
  User lobbyCreator = 1;
  string lobbyName = 2;
  int32 maxPlayers = 3;
  string selectedMap = 4;
}

message Lobbies {
  repeated LobbyInfo lobbyInfos = 1;
}

message JoinRequest {
  LobbyId id = 1;
  User user = 2;
}

message LeaveRequest {
  LobbyId id = 1;
  User user = 2;
}

message DetailedLobbyInfo {
  int64 id = 1;
  string lobbyName = 2;
  User leader = 3;
  repeated User users = 4;
  int32 maxPlayers = 5;
  string selectedMap = 6;
  int32 messageCount = 7;
}

service GrpcNamingService {
  rpc startLobby (LobbyId) returns (google.protobuf.Empty);
  rpc createLobby (NewLobby) returns (LobbyId);
  rpc getLobbies (google.protobuf.Empty) returns (Lobbies);
  rpc joinLobby(JoinRequest) returns (DetailedLobbyInfo);
  rpc leaveLobby(LeaveRequest) returns (User);
}
